# peek-plugin-livedb

./: .gitignore  README.rst  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  sonar-project.properties
peek_plugin_livedb/: __init__.py  plugin_package.json
peek_plugin_livedb/_private/admin-app/: livedb.component.html  livedb.module.ts
peek_plugin_livedb/_private/agent/: AgentEntryHook.py  AgentToServerRpcCallExample.py  RpcForServer.py
peek_plugin_livedb/_private/client/: ClientEntryHook.py  DeviceTupleDataObservableProxy.py  DeviceTupleProcessorActionProxy.py
peek_plugin_livedb/_private/mobile-app/: livedb.component.mweb.html  livedb.component.ns.html  livedb.component.ts  livedb.module.ts
peek_plugin_livedb/_private/server/: ExampleUseTaskApi.py  LiveDBApi.py  LiveDBReadApi.py  LiveDBWriteApi.py  LogicEntryHook.py  ServerEntryHook.py  ServerToAgentRpcCallExample.py  TupleDataObservable.py
peek_plugin_livedb/_private/storage/: DeclarativeBase.py  LiveDbItem.py  LiveDbModelSet.py  LiveDbRawValueQueue.py  LiveDbTuple.py  ModelSet.py  Setting.py  StringIntTuple.py
peek_plugin_livedb/_private/tuples/: AddIntValueActionTuple.py  LiveDBTuple.py  StringCapToggleActionTuple.py  __init__.py
peek_plugin_livedb/doc-admin/: admin_tasks.rst  index.rst  overview.rst
peek_plugin_livedb/server/: LiveDBApiABC.py  LiveDBReadApiABC.py  LiveDBWriteApiABC.py
peek_plugin_livedb/tuples/: DoSomethingTuple.py  ImportLiveDbItemTuple.py  LiveDbDisplayValueTuple.py
peek_plugin_livedb/worker/: WorkerApi.py
(+24 files in other folders)
